# tuneBERTopic

./: .gitignore  README.md  main.py  parameters.yaml  pyproject.toml
tuneBERTopic/: bayesian_search.py  data.py  search_strategy.py
tuneBERTopic/llm/functions/: summaries.py
tuneBERTopic/llm/models/: __init__.py  base.py  openai.py
tuneBERTopic/llm/prompts/: summaries.py
tuneBERTopic/metrics/: __init__.py  supervised.py  unsupervised.py
tuneBERTopic/tuning/: base.py  bayesian_search.py
