[tool.poetry]
name = "tunebertopic"
version = "0.1.0"
description = "A tool for applying hyperparameter tuning to BERTopic."
authors = ["Ben Rowell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
bertopic = "^0.16.2"
umap-learn = "^0.5.6"
hdbscan = "^0.8.37"
gensim = "^4.3.2"
sentence-transformers = "^3.0.1"
mlflow = "^2.14.2"
hyperopt = "^0.2.7"
scipy = "1.12"
pyaml = "^24.4.0"
